[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "pTaunium" }, { email = "ptaunium@gmail.com" }]
dependencies = [
    "pydantic[dotenv]",
    "pycryptodome",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[aiosqlite]>=1.4",
    "httpx>=0.23",
    "rich>=12.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["gemini[test]", "ipython", "mypy", "black", "isort", "rope"]

[project.urls]
homepage = "https://github.com/pTaunium/gemini"
repository = "https://github.com/pTaunium/gemini"
changelog = "https://github.com/pTaunium/gemini/blob/master/CHANGELOG.md"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
